@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

title Class Diagram

class GreenSpace{
    -name
    -address
    -area
    -type
    -emailGSM
}



class SystemUser {
    name
    email
    password
    phone
}


class GreenSpaceRepository {
    - greenSpaceList
    + getGreenSpaceList()
    + registerGreenSpace(greenSpace)
    - greenSpaceIsUnique(greenSpace)
}


class Repositories {
    - greenSpaceRepository

    - Repositories()
    + getInstance()
    + getGreenSpaceRepository()
}

class GreenSpaceMapper {
    + toDTO(greenSpace)
    + toEntity(greenSpaceDTO)
    + toDtoList(greenSpaceList)
}


class RegisterGreenSpaceController {
    -greenSpaceRepository
    -greenSpaceMapper
    + registerGreenSpace(greenSpaceDTO)
    + getGreenSpaceTypeList()
    + getGreenSpaceDTOsList()
    - getGreenSpaceList()
    - getGreenSpaceRepository()

}

class RegisterGreenSpaceUI {

}

class AuthenticationController{
- AuthenticationRepository authenticationRepository
+ getCurrentUserEmail()
+ doLogin()
+ doLogout()
}

class AuthenticationRepository{
- AuthFacade authFacade
+ getCurrentUserEmail()
+ doLogin()
+ doLogout()
}

class GreenSpaceDTO{
-name
-address
-area
-type
-emailGSM
+toString()
+toStringLong()
}

RegisterGreenSpaceUI .> RegisterGreenSpaceController
RegisterGreenSpaceUI .> AuthenticationController
RegisterGreenSpaceUI "1" - "*" GreenSpaceDTO : creates
RegisterGreenSpaceController ..> Repositories : repositories
Repositories --> "1" GreenSpaceRepository
Repositories -> Repositories : instance
RegisterGreenSpaceController .> GreenSpaceMapper
RegisterGreenSpaceController --> GreenSpaceRepository : uses
AuthenticationController --> AuthenticationRepository : uses

SystemUser <|- GSM

GSM "1" -- "1" RegisterGreenSpaceUI
GreenSpace "*" <-- "1" GreenSpaceRepository : stores
GSM "*" <-- "1" AuthenticationRepository : stores
GreenSpace "*" <-- "1" GreenSpaceMapper : creates

@enduml
